examples/invalid/semanticErr/declaration/basicTypeErr01.wacc
# type mismatch: int <- bool
# Output:
# #semantic error#

#Program:#

begin
  int i = true
end
